--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto": "^1.0.1",
     "emailjs": "^3.0.0",
     "express": "^4.17.1",
+    "force-ssl-heroku": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.9.16",
